# typewriter

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  deploy-book.yml  release.yml  typewriter-check.yml
docs/: README.md  cli.md  configuration.md  custom-attributes.md  dart-emitter.md  getting-started.md  go-emitter.md  graphql-emitter.md  json-schema-emitter.md  kotlin-emitter.md  php-emitter.md  plugins.md  python-emitter.md  ruby-emitter.md  serde-compatibility.md  swift-emitter.md  type-mappings.md  typescript-emitter.md
example/: Cargo.toml  README.md  build.rs
example/src/: main.rs
typewriter/: Cargo.toml  README.md
typewriter-book/: Cargo.toml  book.toml
typewriter-book/src/: SUMMARY.md  index.md  lib.rs
typewriter-book/src/01-getting-started/: configuration.md  first-steps.md  installation.md
typewriter-book/src/02-guides/: dart.md  go.md  graphql.md  json-schema.md  kotlin.md  php.md  python.md  ruby.md  swift.md  typescript.md
typewriter-book/src/03-reference/: attributes.md  cli.md  serde-compatibility.md  type-mappings.md
typewriter-book/src/04-advanced/: cross-file-imports.md  enums.md  generics.md
typewriter-book/src/05-contributing/: development.md
typewriter-book/src/06-plugins/: cli.md  configuration.md  overview.md  writing-a-plugin.md
typewriter-cli/: Cargo.toml  README.md
typewriter-cli/src/: lib.rs  main.rs
typewriter-cli/tests/: cli_integration.rs
typewriter-core/: Cargo.toml  README.md
typewriter-core/src/: config.rs  ir.rs  lib.rs  mapper.rs  naming.rs
typewriter-engine/: Cargo.toml  README.md
typewriter-engine/src/: drift.rs  emit.rs  lib.rs  parser.rs  plugin_registry.rs  project.rs  scan.rs
typewriter-go/: Cargo.toml  README.md
typewriter-go/src/: emitter.rs  lib.rs  mapper.rs
typewriter-graphql/: Cargo.toml  README.md
typewriter-graphql/src/: emitter.rs  lib.rs  mapper.rs
typewriter-json-schema/: Cargo.toml  README.md
typewriter-json-schema/src/: emitter.rs  lib.rs  mapper.rs
typewriter-kotlin/: Cargo.toml  README.md
typewriter-kotlin/src/: emitter.rs  lib.rs  mapper.rs
typewriter-macros/: Cargo.toml  README.md
typewriter-macros/src/: emitter.rs  lib.rs  parser.rs
typewriter-plugin/: Cargo.toml
typewriter-plugin-dart/: Cargo.toml
typewriter-plugin-dart/src/: lib.rs
typewriter-plugin-php/: Cargo.toml
typewriter-plugin-php/src/: lib.rs
typewriter-plugin-ruby/: Cargo.toml
typewriter-plugin-ruby/src/: lib.rs
typewriter-plugin/src/: lib.rs
typewriter-python/: Cargo.toml  README.md
typewriter-python/src/: emitter.rs  lib.rs  mapper.rs
typewriter-swift/: Cargo.toml  README.md
typewriter-swift/src/: emitter.rs  lib.rs  mapper.rs
typewriter-test/: Cargo.toml  README.md
typewriter-test/src/: lib.rs
typewriter-test/tests/: common.rs  compile_tests.rs  go_tests.rs  graphql_tests.rs  json_schema_tests.rs  kotlin_tests.rs  python_tests.rs  swift_tests.rs  typescript_tests.rs
typewriter-test/tests/compile_error/: missing_sync_to.rs  missing_sync_to.stderr  union_not_supported.rs  union_not_supported.stderr  unknown_language.rs  unknown_language.stderr
typewriter-test/tests/snapshots/: go_tests__adjacent_enum_snapshot.snap  go_tests__external_enum_snapshot.snap  go_tests__simple_enum_snapshot.snap  go_tests__simple_struct_snapshot.snap  go_tests__struct_with_collections_snapshot.snap  go_tests__tagged_enum_snapshot.snap  go_tests__untagged_enum_snapshot.snap  graphql_tests__adjacent_enum_snapshot.snap  graphql_tests__external_enum_snapshot.snap  graphql_tests__generic_struct_snapshot.snap  graphql_tests__renamed_field_snapshot.snap  graphql_tests__simple_enum_snapshot.snap  graphql_tests__simple_struct_snapshot.snap  graphql_tests__skipped_field_snapshot.snap  graphql_tests__struct_with_collections_snapshot.snap  graphql_tests__tagged_enum_snapshot.snap  graphql_tests__tuple_variant_enum_snapshot.snap  graphql_tests__untagged_enum_snapshot.snap  json_schema_tests__adjacent_enum_snapshot.snap  json_schema_tests__external_enum_snapshot.snap  json_schema_tests__generic_struct_snapshot.snap  json_schema_tests__renamed_field_snapshot.snap  json_schema_tests__simple_enum_snapshot.snap  json_schema_tests__simple_struct_snapshot.snap  json_schema_tests__skipped_field_snapshot.snap  json_schema_tests__struct_with_collections_snapshot.snap  json_schema_tests__tagged_enum_snapshot.snap  json_schema_tests__tuple_variant_enum_snapshot.snap  json_schema_tests__untagged_enum_snapshot.snap  kotlin_tests__adjacent_enum_snapshot.snap  kotlin_tests__external_enum_snapshot.snap  kotlin_tests__simple_enum_snapshot.snap  kotlin_tests__simple_struct_snapshot.snap  kotlin_tests__struct_with_collections_snapshot.snap  kotlin_tests__tagged_enum_snapshot.snap  kotlin_tests__untagged_enum_snapshot.snap  python_tests__adjacent_enum_snapshot.snap  python_tests__external_enum_snapshot.snap  python_tests__simple_enum_snapshot.snap  python_tests__simple_struct_snapshot.snap  (+25 more)
typewriter-typescript/: Cargo.toml  README.md
typewriter-typescript/src/: emitter.rs  lib.rs  mapper.rs
typewriter/src/: lib.rs
