[workspace]
members = [
    "typewriter-core",
    "typewriter-macros",
    "typewriter-typescript",
    "typewriter-python",
    "typewriter",
    "typewriter-test",
    "example",
]
resolver = "2"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
insta = "1"
