[workspace]
members = [
    "typewriter-core",
    "typewriter-engine",
    "typewriter-macros",
    "typewriter-typescript",
    "typewriter-python",
    "typewriter-go",
    "typewriter-swift",
    "typewriter-kotlin",
    "typewriter-graphql",
    "typewriter-json-schema",
    "typewriter-cli",
    "typewriter",
    "typewriter-test",
    "example",
]
resolver = "2"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
insta = "1"
