[workspace]
members = [
    "typewriter-core",
    "typewriter-engine",
    "typewriter-macros",
    "typewriter-plugin",
    "typewriter-plugin-ruby",
    "typewriter-plugin-php",
    "typewriter-plugin-dart",
    "typewriter-typescript",
    "typewriter-python",
    "typewriter-go",
    "typewriter-swift",
    "typewriter-kotlin",
    "typewriter-graphql",
    "typewriter-json-schema",
    "typewriter-cli",
    "typewriter",
    "typewriter-test",
    "typewriter-book",
    "example",
]
resolver = "2"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
quote = "1"
proc-macro2 = "1"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
insta = "1"

# The profile cargo-dist builds with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "powershell"]
install-path = "CARGO_HOME"
install-updater = false
checksum = "sha256"
precise-builds = true
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]