[package]
name = "typebridge-cli"
version = "1.0.0"
edition = "2024"
description = "Standalone CLI for typewriter generation, drift checks, and watch mode"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[package.metadata.dist]
dist = true
display-name = "typebridge"

[[bin]]
name = "typebridge"
path = "src/main.rs"

[[bin]]
name = "typewriter"
path = "src/bin/typewriter.rs"

[[bin]]
name = "cargo-typewriter"
path = "src/bin/cargo-typewriter.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = "2"
notify = "6"
serde_json = "1"
similar = "2"
toml = { workspace = true }
typewriter-core = { path = "../typewriter-core", version = "0.5.2" }
typewriter-engine = { path = "../typewriter-engine", version = "0.5.2" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
