[package]
name = "typewriter-core"
version = "0.3.0"
edition = "2021"
description = "Core IR types, traits, and config for the typewriter type sync SDK"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "typescript", "python", "type-sync", "serde"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
