[package]
name = "typewriter-go"
version = "0.3.1"
edition = "2024"
description = "Go (Golang) emitter for the typewriter type sync SDK"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
keywords = ["codegen", "golang", "type-sync", "types"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[dependencies]
typewriter-core = { path = "../typewriter-core", version = "0.3.1" }
