[package]
name = "typewriter-macros"
version = "0.2.0"
edition = "2021"
description = "Proc macro crate for the typewriter type sync SDK"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "proc-macro", "derive", "type-sync"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
typewriter-core = { path = "../typewriter-core", version = "0.2.0" }
typewriter-typescript = { path = "../typewriter-typescript", version = "0.2.0", optional = true }
typewriter-python = { path = "../typewriter-python", version = "0.2.0", optional = true }
typewriter-go = { path = "../typewriter-go", version = "0.2.0", optional = true }
typewriter-swift = { path = "../typewriter-swift", version = "0.2.0", optional = true }
typewriter-kotlin = { path = "../typewriter-kotlin", version = "0.2.0", optional = true }

[features]
default = ["typescript", "python", "go", "swift", "kotlin"]
typescript = ["dep:typewriter-typescript"]
python = ["dep:typewriter-python"]
go = ["dep:typewriter-go"]
swift = ["dep:typewriter-swift"]
kotlin = ["dep:typewriter-kotlin"]
