[package]
name = "typewriter-macros"
version = "0.3.0"
edition = "2021"
description = "Proc macro crate for the typewriter type sync SDK"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "proc-macro", "derive", "type-sync"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
typewriter-core = { path = "../typewriter-core", version = "0.3.0" }
typewriter-engine = { path = "../typewriter-engine", version = "0.3.0", default-features = false }

[features]
default = ["typescript", "python", "go", "swift", "kotlin"]
typescript = ["typewriter-engine/typescript"]
python = ["typewriter-engine/python"]
go = ["typewriter-engine/go"]
swift = ["typewriter-engine/swift"]
kotlin = ["typewriter-engine/kotlin"]
