[package]
name = "typewriter-plugin-ruby"
version = "1.0.0"
edition = "2024"
description = "Ruby (Sorbet) emitter plugin for typewriter"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
typewriter-plugin = { path = "../typewriter-plugin", version = "1.0.0" }
typewriter-core = { path = "../typewriter-core", version = "1.0.0" }
