[package]
name = "typewriter-python"
version = "0.2.0"
edition = "2021"
description = "Python Pydantic emitter for the typewriter type sync SDK"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "python", "pydantic", "type-sync"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[dependencies]
typewriter-core = { path = "../typewriter-core", version = "0.2.0" }
