[package]
name = "typewriter-test"
version = "0.1.3"
edition = "2021"
publish = false

[dev-dependencies]
typewriter-core = { path = "../typewriter-core" }
typewriter-typescript = { path = "../typewriter-typescript" }
typewriter-python = { path = "../typewriter-python" }
typewriter-go = { path = "../typewriter-go" }
insta = { workspace = true }
