[package]
name = "typewriter-test"
version = "0.4.2"
edition = "2024"
publish = false

[dev-dependencies]
typewriter-core = { path = "../typewriter-core" }
typewriter-typescript = { path = "../typewriter-typescript" }
typewriter-python = { path = "../typewriter-python" }
typewriter-go = { path = "../typewriter-go" }
typewriter-swift = { path = "../typewriter-swift" }
typewriter-kotlin = { path = "../typewriter-kotlin" }
typewriter-graphql = { path = "../typewriter-graphql" }
typewriter-json-schema = { path = "../typewriter-json-schema" }
insta = { workspace = true }
trybuild = "1"
typebridge = { path = "../typewriter", features = ["typescript", "python"] }
