[package]
name = "typebridge"
version = "0.1.3"
edition = "2021"
description = "Cross-language type synchronization SDK for Rust — define once, generate everywhere"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "typescript", "python", "type-sync", "derive"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[dependencies]
typewriter-macros = { path = "../typewriter-macros", version = "0.1.3" }
typewriter-core = { path = "../typewriter-core", version = "0.1.3" }

[features]
default = ["typescript", "python", "go"]
typescript = ["typewriter-macros/typescript"]
python = ["typewriter-macros/python"]
go = ["typewriter-macros/go"]
