[package]
name = "typebridge"
version = "0.4.0"
edition = "2024"
description = "Cross-language type synchronization SDK for Rust — define once, generate everywhere"
license = "Apache-2.0"
repository = "https://github.com/aarambh-darshan/typewriter"
homepage = "https://github.com/aarambh-darshan/typewriter"
readme = "README.md"
keywords = ["codegen", "typescript", "python", "type-sync", "derive"]
categories = ["development-tools::build-utils"]
authors = ["Darshan Vichhi <aarambhdarshan@gmail.com>"]

[dependencies]
typewriter-macros = { path = "../typewriter-macros", version = "0.4.0" }
typewriter-core = { path = "../typewriter-core", version = "0.4.0" }

[features]
default = ["typescript", "python", "go", "swift", "kotlin", "graphql"]
typescript = ["typewriter-macros/typescript"]
python = ["typewriter-macros/python"]
go = ["typewriter-macros/go"]
swift = ["typewriter-macros/swift"]
kotlin = ["typewriter-macros/kotlin"]
graphql = ["typewriter-macros/graphql"]
